[package]
name = "sui-keys"
version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
signature.workspace = true
rand.workspace = true
tiny-bip39.workspace = true
bip32.workspace = true
slip10_ed25519.workspace = true
fastcrypto = { workspace = true, features = ["copy_key"] }
shared-crypto.workspace = true
sui-types.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
