[package]
name = "sui-transaction-checks"
version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
once_cell.workspace = true
sui-macros.workspace = true
sui-config.workspace = true
sui-protocol-config.workspace = true
sui-types.workspace = true
tracing.workspace = true
sui-execution.workspace = true
fastcrypto-zkp.workspace = true
